fix: removed user me endpoint
